--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="./styles.css/modern-normalize.css" />
     <link rel="stylesheet" href="./styles.css/style.css" />
+    <link rel="stylesheet" href="./styles.css/valiables.css" />
   </head>
   <body>
     <!--шапка-->
-    <header>
+    <header class="header">
       <nav>
         <a href="/index.html">WebStudio</a>
         <ul>
