--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles.css/style_portfolio.css" />
+    <link rel="stylesheet" href="./styles.css/style.css" />
   </head>
   <body>
     <!--шапка-->
