подключил пару класов

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,20 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="./styles.css/modern-normalize.css" />
     <link rel="stylesheet" href="./styles.css/style.css" />
+    <link rel="stylesheet" href="./styles.css/valiables.css" />
   </head>
   <body>
     <!--шапка-->
-    <header>
+    <header class="header">
       <nav>
         <a href="/index.html">WebStudio</a>
         <ul>
@@ -35,11 +30,11 @@
     </header>
     <main>
       <ul>
-        <li><button>Все</button></li>
-        <li><button>Веб-сайты</button></li>
-        <li><button>Приложения</button></li>
-        <li><button>Дизайн</button></li>
-        <li><button>Маркетинг</button></li>
+        <li><button class="btn-portf">Все</button></li>
+        <li><button class="btn-portf">Веб-сайты</button></li>
+        <li><button class="btn-portf">Приложения</button></li>
+        <li><button class="btn-portf">Дизайн</button></li>
+        <li><button class="btn-portf">Маркетинг</button></li>
       </ul>
       <ul>
         <li>
