--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./styles.css/modern-normalize.css" />
-    <link rel="stylesheet" href="./styles.css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css/valiables.css" />
+    <link rel="stylesheet" href="./styles.css/style.css" />
   </head>
   <body>
-    <!--шапка-->
+    <!-- <h2 class="visually-hidden">шапка</h2> -->
     <header class="header">
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          ><span class="web">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="header-text" href="./index.html">Студия</a></li>
+          <li><a class="header-text" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="header-text" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -28,15 +35,15 @@
         </li>
       </ul>
     </header>
-    <!--центральная обьява-->
+    <h2 class="visually-hidden">центральная обьява</h2>
     <main>
-      <div>
+      <div class="hero">
         <section>
           <h1>Эффективные решения для вашего бизнеса</h1>
           <a href="">Заказать услугу</a>
         </section>
       </div>
-      <!--Особенности-->
+      <h2 class="visually-hidden">Особенности</h2>
       <section>
         <ul>
           <li>
@@ -69,7 +76,7 @@
           </li>
         </ul>
       </section>
-      <!--вид деятильности-->
+      <!-- <h2 class="visually-hidden">вид деятильности</h2> -->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
@@ -94,7 +101,7 @@
           </li>
         </ul>
       </section>
-      <!--Наша команда-->
+      <!-- <h2 class="visually-hidden">Наша команда</h2> -->
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -141,9 +148,11 @@
         </ul>
       </section>
     </main>
-    <!--Подвал-->
+    <!-- <h2 class="visually-hidden">Подвал</h2> -->
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a class="logo" href="/index.html">
+        <span class="web">Web</span><span class="footer-logo">Studio</span></a
+      >
       <address>
         г. Киев, пр-т Леси Украинки, 26
 
