--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./styles.css/modern-normalize.css" />
-    <link rel="stylesheet" href="./styles.css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css/valiables.css" />
+    <link rel="stylesheet" href="./styles.css/style.css" />
   </head>
   <body>
     <!--шапка-->
     <header class="header">
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a class="logo" href="/index.html">
+          <span class="web">Web</span>Studio</a
+        >
         <ul>
           <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
@@ -29,63 +36,68 @@
       </ul>
     </header>
     <main>
-      <ul>
-        <li><button class="btn-portf">Все</button></li>
-        <li><button class="btn-portf">Веб-сайты</button></li>
-        <li><button class="btn-portf">Приложения</button></li>
-        <li><button class="btn-portf">Дизайн</button></li>
-        <li><button class="btn-portf">Маркетинг</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img src="./images/1.png" alt="Технокряк" />
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./images/2.png" alt="Постер New Orlean vs Golden Star" />
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./images/3.png" alt="Ресторан Seafood" />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="./images/4.png" alt="Проект Prime" />
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./images/5.png" alt="Проект Boxes" />
-          <h3>Проект Boxes</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="./images/6.png" alt="Inspiration has no Borders" />
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./images/7.png" alt="Издание Limited Edition" />
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./images/8.png" alt="Проект LAB" />
-          <h3>Проект LAB</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./images/9.png" alt="Growing Business" />
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
-        </li>
-      </ul>
+      <section>
+        <h1 class="visually-hidden">наши работы</h1>
+        <ul>
+          <li><button class="btn-portf">Все</button></li>
+          <li><button class="btn-portf">Веб-сайты</button></li>
+          <li><button class="btn-portf">Приложения</button></li>
+          <li><button class="btn-portf">Дизайн</button></li>
+          <li><button class="btn-portf">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/1.png" alt="Технокряк" />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/2.png" alt="Постер New Orlean vs Golden Star" />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/3.png" alt="Ресторан Seafood" />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/4.png" alt="Проект Prime" />
+            <h3>Проект Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/5.png" alt="Проект Boxes" />
+            <h3>Проект Boxes</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/6.png" alt="Inspiration has no Borders" />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/7.png" alt="Издание Limited Edition" />
+            <h3>Издание Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/8.png" alt="Проект LAB" />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/9.png" alt="Growing Business" />
+            <h3>Growing Business</h3>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a class="logo" href="/index.html">
+        <span class="web">Web</span><span class="footer-logo">Studio</span></a
+      >
       <address>
         г. Киев, пр-т Леси Украинки, 26
 
