--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -39,36 +39,39 @@
     <main>
       <div class="hero">
         <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <a href="">Заказать услугу</a>
+          <h1 class="hero-centr">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <a class="hero-href" href="">Заказать услугу</a>
         </section>
       </div>
       <h2 class="visually-hidden">Особенности</h2>
       <section>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="h3-speh">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="h3-speh">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="h3-speh">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="h3-speh">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
