--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
