--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
         <ul>
           <li>
             <h3 class="h3-speh">Внимание к деталям</h3>
-            <p>
+            <p class="h3-speh-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="h3-speh">Пунктуальность</h3>
-            <p>
+            <p class="h3-speh-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="h3-speh">Планирование</h3>
-            <p>
+            <p class="h3-speh-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="h3-speh">Современные технологии</h3>
-            <p>
+            <p class="h3-speh-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -81,7 +81,7 @@
       </section>
       <!-- <h2 class="visually-hidden">вид деятильности</h2> -->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="our-deals">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="images/img.jpg" width="370" height="294" alt="верстка" />
@@ -105,8 +105,8 @@
         </ul>
       </section>
       <!-- <h2 class="visually-hidden">Наша команда</h2> -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="our-team">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -115,8 +115,8 @@
               height="260"
               alt="Игорь Демьяненко"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="names">Игорь Демьяненко</h3>
+            <p class="card-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -125,7 +125,7 @@
               height="260"
               alt="Ольга Репина"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="names">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -135,7 +135,7 @@
               height="260"
               alt="Николай Тарасов"
             />
-            <h3>Николай Тарасов</h3>
+            <h3 class="names">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -145,7 +145,7 @@
               height="260"
               alt="Михаил Ермаков"
             />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="names">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -159,9 +159,9 @@
       <address>
         г. Киев, пр-т Леси Украинки, 26
 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
 
-        <a href="tel:+380961111111">38 096 111 11 11</a>
+        <a class="nav" href="tel:+380961111111">38 096 111 11 11</a>
       </address>
     </footer>
   </body>
