--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
     <!--шапка-->
     <header class="header">
       <nav>
-        <a class="logo" href="/index.html">
-          <span class="web">Web</span>Studio</a
+        <a class="logo" href="./index.html"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
         >
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="header-text" href="./index.html">Студия</a></li>
+          <li><a class="header-text" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="header-text" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -48,48 +48,48 @@
         <ul>
           <li>
             <img src="./images/1.png" alt="Технокряк" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="name-project">Технокряк</h3>
+            <p class="text-project">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/2.png" alt="Постер New Orlean vs Golden Star" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="name-project">Постер New Orlean vs Golden Star</h3>
+            <p class="text-project">Дизайн</p>
           </li>
           <li>
             <img src="./images/3.png" alt="Ресторан Seafood" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="name-project">Ресторан Seafood</h3>
+            <p class="text-project">Приложение</p>
           </li>
           <li>
             <img src="./images/4.png" alt="Проект Prime" />
-            <h3>Проект Prime</h3>
+            <h3 class="name-project">Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="./images/5.png" alt="Проект Boxes" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="name-project">Проект Boxes</h3>
+            <p class="text-project">Приложение</p>
           </li>
           <li>
             <img src="./images/6.png" alt="Inspiration has no Borders" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="name-project">Inspiration has no Borders</h3>
+            <p class="text-project">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/7.png" alt="Издание Limited Edition" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="name-project">Издание Limited Edition</h3>
+            <p class="text-project">Дизайн</p>
           </li>
           <li>
             <img src="./images/8.png" alt="Проект LAB" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="name-project">Проект LAB</h3>
+            <p class="text-project">Маркетинг</p>
           </li>
           <li>
             <img src="./images/9.png" alt="Growing Business" />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="name-project">Growing Business</h3>
+            <p class="text-project">Приложение</p>
           </li>
         </ul>
       </section>
