--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header class="header">
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="web">Web</span>Studio</a
-        >
+          ><span class="web">Web</span><span class="studio">Studio</span>
+        </a>
         <ul>
           <li><a class="header-text" href="./index.html">Студия</a></li>
           <li><a class="header-text" href="./portfolio.html">Портфолио</a></li>
@@ -126,7 +126,7 @@
               alt="Ольга Репина"
             />
             <h3 class="names">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="card-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -136,7 +136,7 @@
               alt="Николай Тарасов"
             />
             <h3 class="names">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="card-text">Marketing</p>
           </li>
           <li>
             <img
@@ -146,7 +146,7 @@
               alt="Михаил Ермаков"
             />
             <h3 class="names">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="card-text">UI Designer</p>
           </li>
         </ul>
       </section>
