--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./styles.css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css/valiables.css" />
-    <link rel="stylesheet" href="./styles.css/style.css" />
+    <link rel="stylesheet" href="./css/valiables.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- <h2 class="visually-hidden">шапка</h2> -->
@@ -21,7 +21,7 @@
           ><span class="web">Web</span><span class="studio">Studio</span>
         </a>
         <ul>
-          <li><a class="header-text" href="./index.html">Студия</a></li>
+          <li><a class="header-text current" href="./index.html">Студия</a></li>
           <li><a class="header-text" href="./portfolio.html">Портфолио</a></li>
           <li><a class="header-text" href="">Контакты</a></li>
         </ul>
