добавляет шрифт в боди обновляет подвал

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <span class="web">Web</span><span class="footer-logo">Studio</span></a
       >
       <address>
-        г. Киев, пр-т Леси Украинки, 26
+        <span class="adress-kiev">г. Киев, пр-т Леси Украинки, 26</span>
 
         <a class="nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
 
