--- a/portfolio.html
+++ b/portfolio.html
@@ -101,11 +101,11 @@
         <span class="web">Web</span><span class="footer-logo">Studio</span></a
       >
       <address>
-        г. Киев, пр-т Леси Украинки, 26
+        <span class="adress-kiev">г. Киев, пр-т Леси Украинки, 26</span>
 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
 
-        <a href="tel:+380961111111">38 096 111 11 11</a>
+        <a class="nav" href="tel:+380961111111">38 096 111 11 11</a>
       </address>
     </footer>
   </body>
